crates/aiy/src/client_ptb/snapshots/aiy__client_ptb__lexer__tests__unexpected_0x.snap
---
source: crates/aiy/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 2,
        },
        value: Lexeme(
            Unexpected,
            "0x",
        ),
    },
]
